# midl-parser

./: LICENSE  README.md  midl_dump.py  pyproject.toml
.github/workflows/: publish.yml
midl_classic/: __init__.py  __main__.py  lexer.py  parser.py
midl_parser/: __init__.py  __main__.py  _cli.py  ast_nodes.py  errors.py  tokens.py
